--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,16 @@ guess-language==0.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+numpy==1.10.4
+pandas==0.17.1
 pbr==1.8.1
 psycopg2==2.6.1
+py==1.4.31
+pytest==2.8.7
+python-dateutil==2.4.2
 python-openid==2.2.5
 pytz==2015.7
+selenium==2.52.0
 six==1.10.0
 speaklater==1.3
 SQLAlchemy==1.0.11
