--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,13 @@ pbr==1.8.1
 psycopg2==2.6.1
 py==1.4.31
 pytest==2.8.7
+pytest-html==1.7
+pytest-selenium==1.1
+pytest-variables==1.3
 python-dateutil==2.4.2
 python-openid==2.2.5
 pytz==2015.7
+requests==2.9.1
 selenium==2.52.0
 six==1.10.0
 speaklater==1.3
