upgrade reqs so github stops complaining even though this doesn't work (probably)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,86 @@
-Babel==2.2.0
+attrs==19.3.0
+Automat==0.8.0
+Babel==2.8.0
 blinker==1.4
-coverage==4.0.3
-decorator==4.0.6
-Flask==0.10.1
-Flask-Babel==0.9
-Flask-Login==0.3.2
+certifi==2019.11.28
+cffi==1.13.2
+characteristic==14.3.0
+chardet==3.0.4
+Click==7.0
+constantly==15.1.0
+coverage==5.0.3
+cryptography==2.8
+cssselect==1.1.0
+decorator==4.4.1
+defusedxml==0.6.0
+docutils==0.16
+enum34==1.1.6
+Flask==1.1.1
+Flask-Babel==1.0.0
+Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-OpenID==1.2.5
-Flask-SQLAlchemy==2.1
+Flask-SQLAlchemy==2.4.1
 Flask-WhooshAlchemy==0.56
-Flask-WTF==0.12
+Flask-WTF==0.14.3
 flipflop==1.0
 guess-language==0.2
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-numpy==1.10.4
-pandas==0.17.1
-pbr==1.8.1
-psycopg2==2.6.1
-py==1.4.31
-pytest==2.8.7
-pytest-html==1.7
-pytest-selenium==1.1
-pytest-variables==1.3
-python-dateutil==2.4.2
+hyperlink==19.0.0
+idna==2.8
+incremental==17.5.0
+ipaddress==1.0.23
+itsdangerous==1.1.0
+Jinja2==2.11.1
+lockfile==0.12.2
+lxml==4.5.0
+MarkupSafe==1.1.1
+more-itertools==8.2.0
+numpy==1.18.1
+packaging==20.1
+pandas==1.0.1
+parsel==1.5.2
+pbr==5.4.4
+pid==2.2.5
+pluggy==0.13.1
+Protego==0.1.16
+psycopg2==2.8.4
+py==1.8.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.19
+PyDispatcher==2.0.5
+PyHamcrest==2.0.0
+pyOpenSSL==19.1.0
+pyparsing==2.4.6
+pytest==5.3.5
+pytest-base-url==1.4.1
+pytest-html==2.0.1
+pytest-metadata==1.8.0
+pytest-selenium==1.17.0
+pytest-variables==1.9.0
+python-daemon==2.2.4
+python-dateutil==2.8.1
 python-openid==2.2.5
-pytz==2015.7
-requests==2.9.1
-selenium==2.52.0
-six==1.10.0
+python3-openid==3.1.0
+pytz==2019.3
+queuelib==1.5.0
+requests==2.22.0
+Scrapy==1.8.0
+selenium==3.141.0
+service==0.6.0
+service-identity==18.1.0
+setproctitle==1.1.10
+six==1.14.0
 speaklater==1.3
-SQLAlchemy==1.0.11
-sqlalchemy-migrate==0.10.0
-sqlparse==0.1.18
+SQLAlchemy==1.3.13
+sqlalchemy-migrate==0.13.0
+sqlparse==0.3.0
 Tempita==0.5.2
-Werkzeug==0.11.3
-wheel==0.24.0
-Whoosh==2.7.0
-WTForms==2.1
+Twisted==19.10.0
+urllib3==1.25.8
+w3lib==1.21.0
+wcwidth==0.1.8
+Werkzeug==1.0.0
+Whoosh==2.7.4
+WTForms==2.2.1
+zope.interface==4.7.1
